# ostrich-node

./: .eslintrc  .eslintrc.js  .gitignore  .gitlab-ci.yml  .gitmodules  .npmignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE.txt  README.md  binding.gyp  install-kc-ci.sh  package-lock.json  package.json  set_kyoto_dirs.sh  tsconfig.json
.github/workflows/: ci.yml  test-on-commit.yml
lib/: IOstrichStoreNative.ts  OstrichStore.cc  OstrichStore.h  OstrichStore.ts  index.ts  ostrich.cc  ostrich.js  ostrich.ts  utils.ts
test/: .eslintrc  append-test.js  append-test.ts  deltamaterialized-test.js  deltamaterialized-test.ts  ostrich-test.js  ostrich-test.ts  prepare-ostrich.js  prepare-ostrich.ts  version-test.js  version-test.ts  versionmaterialized-test.js  versionmaterialized-test.ts
test/test.ostrich/: patchtree_1.kct_osp_additions  patchtree_1.kct_osp_deletions  patchtree_1.kct_pos_additions  patchtree_1.kct_pos_deletions  patchtree_1.kct_pso_additions  patchtree_1.kct_pso_deletions  patchtree_1.kct_sop  patchtree_1.kct_spo  patchtree_1.kct_spo_additions  patchtree_1.kct_spo_deletions  snapshot_0.hdt  snapshot_0.hdt.index.v1-1  snapshotpatch_0.dic
test/test.ostrich_/: patchtree_1.kct_osp  patchtree_1.kct_spo_deletions  snapshot_0.hdt  snapshotpatch_0.dic
